[package]
name = "envelopers"
version = "0.8.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A very simple envelope encryption library using aes-gcm"
repository = "https://github.com/cipherstash/envelopers"

[dev-dependencies]
aws-smithy-client = { version = "0.40.2", features = [ "test-util" ] }
aws-smithy-http = "0.40.2"
base64 = "0.13.0"
futures = "0.3.21"
hex = "0.4.3"
hex-literal = "0.3.2"
http = "0.2"
itertools = "0.10.3"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }

[dependencies]
aes-gcm = "0.10.1"
aes-gcm-siv = "0.11.1"
async-mutex = "1.4.0"
async-trait = "0.1.53"
aws-config = { version = "0.10.1", optional = true }
aws-sdk-kms = { version = "0.10.1", optional = true }
lru = "0.7.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_cbor = "0.11.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"
zeroize = { version = "1.5.7", features = [ "zeroize_derive" ] }

[features]
default = ["aws-kms", "cache"]
aws-kms = ["dep:aws-sdk-kms", "dep:aws-config"]
cache = []
tokio = ["aws-sdk-kms?/rt-tokio"]

[[example]]
name = "kms"
required-features = ["aws-kms", "cache"]

[[example]]
name = "kms-benchmark"
required-features = ["aws-kms", "cache"]
